    * Remove the stupid welcome pop-up, which I'm tired of because it complicates tests.
    * Enhance extensions.rb to allow local.properties to override build.properties and cuucmber.properties.
    * Rework Capybara configuration to allow configuring the AJAX wait timeout in properties.
    * Bump up to CedarBuild v0.8.8 to fix problems with JRuby and JVM 1.6.

Version 0.9.33   27 Oct 2013

    * Bump up to latest-and-greatest CedarCommon v2.4.2.
    * Refactor a lot of code in build.gradle out into CedarBuild and bump up to v0.8.7.
    * Fall back the "please wait" change, which didn't make enough difference to worth it.
    * Minor tweaks to make the build process work the same on Linux as Windows.

Version 0.9.32   23 Oct 2013

    * Move up to CedarCommon v2.4.1.
    * Remove NativeUtils, which now exists up in CedarCommon.
    * Refactor to use the new AbstractWidgetUtils and AbstractStandardDialog classes.
    * Add new required method StandardRpcCaller.generateNoResponseReceivedError().
    * Fix BugReportDialogView so the first text field has focus when it's opened.
    * Change the name of static constants in StubbedClientTestCase to make them more legible.
    * Convert unit tests for StandardRpcCaller to use StubbedClientTestCase.
    * Add Cucumber tests: lock/unlock users and RPC security (including new view and RPC)
    * Reorganize Spring context, pulling most definitions up to applicationContext.xml.
    * Change the initial "please wait" message to indicate that the application is starting.

Version 0.9.31   09 Oct 2013

    * Move up to CedarCommon v2.2.1.
    * Fix the CSS style for "text as link" to use the correct cursor.
    * Remove explicit use of Velocity classes in application code.

Version 0.9.30   27 Sep 2013

    * Move up to CedarCommon v2.2.0.
    * Use IGaeUserService.addClientRoles() rather than interacting with session directly.
    * Fix problems with initial RPC call timing out, using the new XSRF RPC timeout config hook.
